# nanoGPT

./: .gitignore  Model_Weights_Loaded.ipynb  README.md  gpt_download3.py  pyproject.toml
