[project]
name = "nanoGPT"
version = "0.1.0"
description = "nanoGPT implementation by Andrey Karpathy"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=3.5.0",
    "numpy>=1.26.0,<2.0.0",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.2",
    "wandb>=0.19.8",
]

[tool.uv]
preview = true
